unpackaged/objects/MC4SF__MC_Static_Segment__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Created_Date__c</fullName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Reset__c</fullName>
        <label>Last Reset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Update__c</fullName>
        <label>Last Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <label>MC List</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Static Segments</relationshipLabel>
        <relationshipName>MC_Static_Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <externalId>true</externalId>
        <label>MailChimp ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Static Segment</label>
    <nameField>
        <label>MC Static Segments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Static Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>